--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@types/chroma-js": "^2.1.3",
+    "chroma-js": "^2.1.2",
     "core-js": "^3.6.5",
     "html2canvas": "^1.0.0-rc.7",
     "register-service-worker": "^1.7.1",
