--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
       "dom",
       "dom.iterable",
       "scripthost"
-    ]
+    ],
+    "typeRoots": ["node_modules/@types/chroma-js"]
   },
   "include": [
     "src/**/*.ts",
